name change cbars-fb to fbcbars

--- a/fb/fbcbars.1
+++ b/fb/fbcbars.1
@@ -1,8 +1,8 @@
-.TH CBARS-FB 1 BRL/CAD
+.TH FBCBARS 1 BRL/CAD
 .SH NAME
-cbars-fb \- display standard color bars on a framebuffer
+fbcbars \- display standard color bars on a framebuffer
 .SH SYNOPSIS
-.B cbars-fb
+.B fbcbars
 .RB [ \-f ]
 .RB [ \-s ]
 .RB [ \-h ]
@@ -11,7 +11,7 @@ cbars-fb \- display standard color bars on a framebuffer
 .RB [ \-W\  scr_width]
 .RB [ \-N\  scr_height]
 .SH DESCRIPTION
-.I cbars-fb
+.I fbcbars
 displays a color bar scale on the currently selected framebuffer.
 .PP
 The default pattern is the standard EIA color bars,
