plot-fb changed to pl-fb

--- a/fb/fbline.1
+++ b/fb/fbline.1
@@ -54,7 +54,7 @@ options.
 .SH EXAMPLE
 fbline -h -c -r0 -b0 82 11 300 472
 .SH "SEE ALSO"
-brlcad(1), fbed(1), fblabel(1), fbpoint(1), plot-fb(1), libfb(3), pix(5)
+brlcad(1), fbed(1), fblabel(1), fbpoint(1), pl-fb(1), libfb(3), pix(5)
 .SH AUTHOR
 Michael John Muuss
 .SH SOURCE
