--- a/fb/rle-fb.1
+++ b/fb/rle-fb.1
@@ -24,12 +24,37 @@ to a frame buffer.
 If
 .I file.rle\^
 is not specified, standard input is read.
-.I rle-fb\^
-determines the type and size of the saved file (color or B&W)
-and acts accordingly.
 .PP
-By default, the requested framebuffer size is the size given in the
-header of the RLE file.
+Each RLE file contains an \fIimage rectangle\fR.
+The Utah Raster Toolkit semantics specify that the
+.I rle-fb
+program is to clip the RLE image rectangle to the screen of the current
+framebuffer, only modifying pixels in that area.
+In the case where the RLE file contains a rectangle of size greater
+than or equal to that of the current screen, then all pixels on the screen
+are modified.
+In the case where the RLE file contains a rectangle smaller than the
+screen, or where a portion of that rectangle has been positioned
+outside the bounds of the screen, then this program will only modify those
+screen pixels underneath the RLE image rectangle.
+While this is behavior can be a great boon when creating a montage of
+smaller images, it behoves the user to arrange for a suitable background.
+.PP
+If the screen size is explicitly specified by a command line option,
+the framebuffer is opened with exactly that size, and the RLE image
+rectangle is clipped to that size, even if the framebuffer hardware
+could support a larger size.
+If the screen size is not specified, then this program attempts to
+open the framebuffer with a size large enough to hold the entire
+RLE image rectangle.  If the open succeeds, but the full size request
+is not honored, then the RLE image rectangle is silently clipped to
+the available screen.
+The RLE image rectangle can be repositioned on the screen with the
+.B \-X
+and
+.B \-Y
+command line options, as well as by using
+.IR repos(1) .
 .TP
 .B \-h
 changes the screen size to 1024x1024.
@@ -49,7 +74,9 @@ If not given, the environment variable
 .SM \fBFB_FILE\fR
 is used to select the display device (see
 .IR brlcad(1) ).
-If this variable is also not set, the default device for your system will
+If
+.SM \fBFB_FILE\fR
+has not been set, the default device for your system will
 be used.
 .TP
 .B \-c
@@ -91,18 +118,20 @@ The color intensity in each channel ranges from 0 (dark) to 255 (bright).
 .TP
 .BI \-X\  scr_xoff
 Specify a screen X offset, which will offset the file onto the screen
-by the given amount.
-Deferred implementation.
+by the given amount.  (ie,
+.BI \-X\  10
+would place (0,0) in the RLE image rectangle at screen coordinate (10,0).
+The offset may be negative or positive.
+The RLE image rectangle will be clipped to the screen, as required.
 .TP
 .BI \-Y\  scr_yoff
 Specify a screen Y offset, which will offset the file onto the screen
 by the given amount.
-Deferred implementation.
 .TP
 .I file.rle\^
 Name of file to decode, in RLE format.
 If not specified, standard input is used instead.
-.SH NOTES
+.PP
 The run length encoded image format is best used for the long-term
 storage of images, as it uses less disk storage than a
 .I pix(5)
@@ -112,9 +141,14 @@ This program is also useful when using the Utah Raster Toolkit
 utilities, which only operate on RLE encoded files;
 this program will display their results on a framebuffer.
 .PP
-Compositing of images is the province of other tools.
+Simple compositing of images can be done with the
+.B \-O
+overlay flag on
+.IR rle-fb(1) .
+More sophisticated compositing can be achieved using some of the
+other tools.
 For RLE files,
-.IR comp(1)
+.IR comp(1) ,
 .IR crop(1) ,
 .IR repos(1) ,
 .IR rlepatch(1) ,
@@ -139,10 +173,54 @@ are used.
 \|rle-fb \|\-C 0/255/0 \|<car.rle
 .ft R
 .RE
+.SH DIAGNOSTICS
+.TP
+``rle-fb:  excess arguments ignored''.
+More than one RLE file name was specified.
+.TP
+``rle-fb:  Error reading setup information''.
+The subroutine
+.B rle_get_setup()
+returned an error code.
+Either the file is not in Edition-2 or Edition-3 RLE format,
+or the file has been damaged or truncated.
+If the file is in Edition-1 RLE format, the
+.I orle-fb(1)
+program can be used to display the file.
+.TP
+``rle-fb: Warning: RLE image rectangle entirely off screen''
+The combined effects of the RLE image rectangle definition stored in the
+RLE file and any
+.B \-X
+and
+.B \-Y
+command line options have resulted in the RLE image rectangle being
+shifted entirely off the screen.
+While this is not an error, no screen pixels were changed.
+This may not have been the intent of the user, so the message is printed.
+.TP
+``rle-fb: correcting for old style colormap''.
+The only change between the Edition-2 and Edition-3 RLE file formats
+that is not upwards compatible is the format of the colormap.
+Edition-2 stored eight bits of data right justified in a 16-bit field,
+while Edition-3 stores a full 16-bit field.
+In order to allow this program to decode images stored in the Edition-2
+format, any colormap which has the upper eight bits all zero in all
+colormap entries is assumed to be an Edition-2 colormap, and is adjusted
+for suitable display.
+While this heuristic may be ``tricked'' with an Edition-3 colormap
+with degenerate values, the picture would have been very dark,
+and the benefits of full upwards compatability from Edition-2 format files
+were deemed worth this risk.
 .SH SEE ALSO
-brlcad(1), fb-rle(1), rle-pix(1), pix-rle(1), librle(3).
-.SH AUTHOR
+brlcad(1), fb-rle(1), rle-pix(1), pix-rle(1),
+pixrect(1), pixscale(1), pixmerge(1),
+comp(1), crop(1), repos(1), rlepatch(1), rlebox(1),
+librle(3).
+.SH AUTHORS
 Michael John Muuss
+.br
+Paul R. Stay
 .SH SOURCE
 SECAD/VLD Computing Consortium, Bldg 394
 .br
