Added COVART reference

--- a/rt/rtg3.1
+++ b/rt/rtg3.1
@@ -115,7 +115,11 @@ Component line (one for each three components in this ray)
 covart(1V), gift(1V), mged(1),
 rt(1), rtray(1),
 librt(3), plot3(5), ray(5V).
-[[refer to JTCG COVART manual]]
+.br
+``\fICOVART II \(em A Simulation Program for Computation of Vulnerable Areas
+and Repair Times \(em User Manual\fR'', Joint Technical Coordinating
+Group for Munitions Effectiveness, Anti-Air Aerial Target
+Vulnerability Working Group, 61-JTCG/ME-84-3.
 .SH DIAGNOSTICS
 Numerous error conditions are possible, usually due to errors in
 the geometry database.
