--- a/rt/rtg3.1
+++ b/rt/rtg3.1
@@ -56,8 +56,7 @@ and displayed with \fIpl_fb\fR or \fIpl_sgi\fR.
 .B GIFT
 format required the translation of a ray's zero distance to the
 model center.  This was done by adding a distance correction factor.
-Each ray's origin was translated to the cell center.  The cell center
-coordinates and the ones actually fired from are outputted.
+The cell center coordinates and the ones actually fired from are outputted.
 .LP
 Obliquity angles (declensions off the normal) are computed internally
 in
@@ -74,7 +73,7 @@ normals point inward.
 .LP
 .B
 GIFT
-prefixes the first component of each ccrd with a space.  It also
+prefixes the first component of each card with a space.  It also
 zero-fills the card if there are less than three components.  Neither
 COVART II nor COVART III require this zero-filling, so it is omitted by
 .I rtg3.
