*** empty log message ***

--- a/util/alias-pix.1
+++ b/util/alias-pix.1
@@ -6,7 +6,7 @@ alias\(hypix	\- convert an image from Alias(tm) pix format to BRL PIX(5) format
 [
 .I \-v
 ]
-< ALIASpixfile> BRLpixfile 
+< ALIASpixfile > BRLpixfile 
 .SH DESCRIPTION
 .Ialias\(hypix
 converts the 
@@ -17,4 +17,4 @@ format file on the standard output.
 .SH OPTIONS
 .TP
 .B \-v
-print the Alias pix file header on standard out
+print a text summary of the Alias pix file header on standard error output.
