--- a/util/pix-sun.1
+++ b/util/pix-sun.1
@@ -1,4 +1,4 @@
-.TH PIX-ALIAS 1 BRL/CAD
+.TH PIX-SUN 1 BRL/CAD
 .SH NAME
 pix\(hysun	\- convert a BRL PIX(5) format image to a Sun Rasterfile format
 .SH SYNOPSIS
