--- a/rt/rtg3.1
+++ b/rt/rtg3.1
@@ -156,6 +156,32 @@ librt(3), plot3(5), ray(5V).
 and Repair Times \(em User Manual\fR'', Joint Technical Coordinating
 Group for Munitions Effectiveness, Anti-Air Aerial Target
 Vulnerability Working Group, 61-JTCG/ME-84-3.
+.SH SAMPLE USAGE
+This section will acquaint the user with the ordinary usage of \fIrtg3\fR.
+A GIFT-3 output file is produced by giving the command:
+.nf
+.ce \fIrtg3 -s32 database.g all.g > file\fR
+.fi
+This will a 32 by 32 ray file of the named database.  If a bounding-box
+plotfile is to be made as part of producing visual output, use
+.nf
+.ce \fIrtg3 -s32 -x80000000 database.g\fR
+.fi
+The bounding boxes for the objects in the database specified will
+automatically be put into a file called \fIrtrpp.plot\fR.  Now,
+to compute the color rays use
+.nf
+.ce \fIrtg3 -s32 -X80000000 database.g\fR
+.fi
+The results will be automaticaly stored in \fIrtg3.pl\fR.  The rays
+will be colored green where they traverse solids in the model, and blue
+where they traverse air within the model.
+.LP
+The two plot files can now be combined into a single picture and
+displayed:
+.nf
+.ce \fIcat rtrpp.plot rtg3.pl | pl-sgi\fR
+.fi
 .SH DIAGNOSTICS
 Numerous error conditions are possible, usually due to errors in
 the geometry database.
