--- a/rt/rtg3.1
+++ b/rt/rtg3.1
@@ -159,29 +159,41 @@ Vulnerability Working Group, 61-JTCG/ME-84-3.
 .SH SAMPLE USAGE
 This section will acquaint the user with the ordinary usage of \fIrtg3\fR.
 A GIFT-3 output file is produced by giving the command:
+
 .nf
-.ce \fIrtg3 -s32 database.g all.g > file\fR
+.ce
+\fIrtg3 -s32 database.g all.g > file\fR
 .fi
+
 This will a 32 by 32 ray file of the named database.  If a bounding-box
 plotfile is to be made as part of producing visual output, use
+
 .nf
-.ce \fIrtg3 -s32 -x80000000 database.g\fR
+.ce
+ \fIrtg3 -s32 -x80000000 database.g\fR
 .fi
+
 The bounding boxes for the objects in the database specified will
 automatically be put into a file called \fIrtrpp.plot\fR.  Now,
 to compute the color rays use
+
 .nf
-.ce \fIrtg3 -s32 -X80000000 database.g\fR
+.ce
+ \fIrtg3 -s32 -X80000000 database.g\fR
 .fi
+
 The results will be automaticaly stored in \fIrtg3.pl\fR.  The rays
 will be colored green where they traverse solids in the model, and blue
 where they traverse air within the model.
 .LP
 The two plot files can now be combined into a single picture and
 displayed:
+
 .nf
-.ce \fIcat rtrpp.plot rtg3.pl | pl-sgi\fR
+.ce
+ \fIcat rtrpp.plot rtg3.pl | pl-sgi\fR
 .fi
+
 .SH OVERLAP REPORTING
 \fIRTG3\fR shares overlap handling and reporting with the rest of the
 \fIRT\fR family of applications.  A brief description of the overlap
@@ -191,11 +203,16 @@ The first one hundred (100) overlaps are individually reported.  Thereafter,
 the user us notified that further overlaps, if found, are omitted.  This
 alerts the user that more overlaps exist, but that they are too numerous to
 list individually.  The general overlap message takes the following form:
+
 .nf
-.ce \fI"OVERLAP1: reg=region_name isol=solid_name"\fR
-.ce \fI"OVERLAP2: reg=region_name isol=solid_name"\fR
-.ce \fI"OVERLAP depth #mm at (x, y, z) x# y# lvl#"\fR
+.ce
+ \fI"OVERLAP1: reg=region_name isol=solid_name"\fR
+.ce
+ \fI"OVERLAP2: reg=region_name isol=solid_name"\fR
+.ce
+ \fI"OVERLAP depth #mm at (x, y, z) x# y# lvl#"\fR
 .fi
+
 This means that OVERLAP1 and OVERLAP2 share a common space (depth) of
 #millimeters at the x, y, and z vector coordinated within the model, and 
 at the ray coordinates (screen coordinates) x and y.  Level refers to the
