--- a/fb/fbfade.1
+++ b/fb/fbfade.1
@@ -1,8 +1,8 @@
-'\"	fbfade.1	%W% %E%
+'\"	@(#)$Header$ (BRL)
 '\" Edit the next two lines to configure for your system:
 .ds ms 1\" utility manual section, normally 1B -- alternatives are 1, 1L, etc.
 .ds ls 3\" library manual section, normally 3B -- alternatives are 3, 3L, etc.
-.ds fs 5\" format manual section, normally 5B -- alternatives are 5, 5L, etc.
+.ds fs 5\" format manual section, normally 4B -- alternatives are 5, 4L, etc.
 .ie t .ds pf B\" "printout" font, normally (CW -- use B if you don't have one
 .el .ds pf 1
 '\"
@@ -19,9 +19,31 @@ fbfade \- fade a frame buffer image in or out
 [
 .CW -h
 ] [
-.CW -i
+.CW -f
 .I "input image name"
 ] [
+.CW -s
+.I "input square size"
+] [
+.CW -w
+.I "input width"
+] [
+.CW -n
+.I "input height"
+]
+.br
+	[
+.CW -S
+.I "output square size"
+] [
+.CW -W
+.I "output width"
+] [
+.CW -N
+.I "output height"
+] [ [
+.CW -F
+]
 .I "output frame buffer name"
 ]
 .SH DESCRIPTION
@@ -29,22 +51,45 @@ fbfade \- fade a frame buffer image in or out
 gradually displays an image on a frame buffer,
 one randomly chosen pixel at a time.
 .SS Options
-.TP "\w'\fIoutput frame buffer name\fP\ \ \ 'u"
+.TP "\w'\f\*(pf-F\fP \fIoutput frame buffer name\fP\ \ \ 'u"
 .CW -h
 (``high resolution'')\ 
-Assumes 1024 by 1024 pixels for input frame buffer size
-instead of the default 512 by 512.
-The output frame buffer size requested will be the same as
-the actual input image size.
+Assumes 1024 by 1024 pixels for the default input frame buffer size
+instead of 512 by 512.
+Explicitly specified sizes override this default,
+and if the actual input image size is smaller than requested,
+the actual size will be used.
+If the output frame buffer size is not specified,
+the actual input image size will be requested for output also.
+If the actual output frame buffer size is greater than the input image size,
+only the input-image sized lower-left portion of the frame buffer will be used.
 Actual sizes depend on details of the specific frame buffers.
 .TP
-\f\*(pf-i\fP \fIinput image name\fP
+\f\*(pf-f\fP \fIinput image name\fP
 Inputs the image to be displayed
 from the specified frame buffer or \fIpix\fP(\*(fs) file,
 instead of using a constant-background image
 (which amounts to fading out the image initially on the output frame buffer).
 .TP
-.I "output frame buffer name"
+\f\*(pf-s\fP \fIinput square size\fP
+Specifies the input image width and height.
+.TP
+\f\*(pf-w\fP \fIinput width\fP
+Specifies the input image width.
+.TP
+\f\*(pf-n\fP \fIinput height\fP
+Specifies the input image height.
+.TP
+\f\*(pf-S\fP \fIoutput square size\fP
+Specifies the output frame buffer width and height.
+.TP
+\f\*(pf-W\fP \fIoutput width\fP
+Specifies the output frame buffer width.
+.TP
+\f\*(pf-N\fP \fIoutput height\fP
+Specifies the output frame buffer height.
+.TP
+\f\*(pf-F\fP \fIoutput frame buffer name\fP
 Outputs to the specified frame buffer
 instead of the one specified by the
 .CW FB_FILE
@@ -52,6 +97,9 @@ environment variable
 (or the default frame buffer, if
 .CW FB_FILE
 is not set).
+If this is the last option specified, the
+.CW -F
+is optional.
 .SH CAVEAT
 .CW fbfade
 works best in conjunction with a frame buffer having very fast access to pixels.
