--- a/fb/fbstretch.1
+++ b/fb/fbstretch.1
@@ -1,9 +1,8 @@
-'\"	fbstretch.1	%W% %E%
+'\"	@(#)$Header$ (BRL)
 '\" Edit the next two lines to configure for your system:
 .ds ms 1\" utility manual section, normally 1B -- alternatives are 1, 1L, etc.
-.ds Vs 1V\" hoc manual section, normally 1V -- alternatives are 1, 1B, 1L, etc.
 .ds ls 3\" library manual section, normally 3B -- alternatives are 3, 3L, etc.
-.ds fs 5\" format manual section, normally 5B -- alternatives are 5, 5L, etc.
+.ds fs 5\" format manual section, normally 4B -- alternatives are 5, 4L, etc.
 .ie t .ds pf B\" "printout" font, normally (CW -- use B if you don't have one
 .el .ds pf 1
 '\"
@@ -20,19 +19,43 @@ fbstretch \- stretch a frame buffer image
 [
 .CW -h
 ] [
-.CW -i
+.CW -f
 .I "input image name"
 ] [
 .CW -s
+.I "input square size"
+] [
+.CW -w
+.I "input width"
+] [
+.CW -n
+.I "input height"
 ]
 .br
 	[
+.CW -a
+] [
+.CW -v
+] [
 .CW -x
 .I "horizontal scale factor"
 ] [
 .CW -y
 .I "vertical scale factor"
+]
+.br
+	[
+.CW -S
+.I "output square size"
 ] [
+.CW -W
+.I "output width"
+] [
+.CW -N
+.I "output height"
+] [ [
+.CW -F
+]
 .I "output frame buffer name"
 ]
 .SH DESCRIPTION
@@ -45,40 +68,62 @@ When expanding (scale factor greater than 1), pixels are simply replicated;
 when compressing (scale factor less than 1), pixel averaging is performed
 unless sampling is explicitly requested.
 .SS Options
-.TP "\w'\f\*(pf-x\fP \fIhorizontal scale factor\fP\ \ \ 'u"
+.TP "\w'\f\*(pf-F\fP \fIoutput frame buffer name\fP\ \ \ 'u"
 .CW -h
 (``high resolution'')\ 
-Assumes 1024 by 1024 pixels for the input frame buffer size
-instead of the default 512 by 512.
+Assumes 1024 by 1024 pixels for the default input frame buffer size
+instead of 512 by 512.
+Explicitly specified sizes override this default,
+and whenever an actual frame buffer size is smaller than requested,
+the actual size is always used.
 The output frame buffer size requested will be the same as
 the actual input image size if
 .CW fbstretch
-determines that the input and output frame buffers are the same;
-otherwise,
-the output frame buffer size requested will be that of the stretched image.
+determines that the input and output frame buffers are the same.
 Actual sizes depend on details of the specific frame buffers.
 If there are output margins outside the stretched image,
 they will be cleared to the background color;
-if the stretched image would extend beyond the output frame buffer,
+if the stretched image would extend beyond the output frame buffer size,
 it will be clipped to fit.
 .TP
-\f\*(pf-i\fP \fIinput image name\fP
+\f\*(pf-f\fP \fIinput image name\fP
 Inputs the image to be displayed from the specified frame buffer or pix file,
 instead of modifying the output frame buffer ``in place''.
 .TP
-.CW -s
+\f\*(pf-s\fP \fIinput square size\fP
+Specifies the input image width and height.
+.TP
+\f\*(pf-w\fP \fIinput width\fP
+Specifies the input image width.
+.TP
+\f\*(pf-n\fP \fIinput height\fP
+Specifies the input image height.
+.TP
+.CW -a
+(``no averaging'')\ 
 Specifies that output pixels will be sampled from the input,
 instead of being computed by averaging the RGB values.
 .TP
 \f\*(pf-x\fP \fIhorizontal scale factor\fP
-Scales the image by the specified factor in the horizontal direction
-(default 1).
+Scales the image by the specified factor in the horizontal direction;
+the default is to use the ratio of output to input widths, if specified,
+otherwise 1.
 .TP
 \f\*(pf-y\fP \fIvertical scale factor\fP
-Scales the image by the specified factor in the vertical direction
-(default 1).
+Scales the image by the specified factor in the vertical direction;
+the default is to use the ratio of output to input heights, if specified,
+otherwise 1.
 .TP
-.I "output frame buffer name"
+\f\*(pf-S\fP \fIoutput square size\fP
+Specifies the output frame buffer width and height.
+.TP
+\f\*(pf-W\fP \fIoutput width\fP
+Specifies the output frame buffer width.
+.TP
+\f\*(pf-N\fP \fIoutput height\fP
+Specifies the output frame buffer height.
+.TP
+\f\*(pf-F\fP \fIoutput frame buffer name\fP
 Outputs to the specified frame buffer
 instead of the one specified by the
 .CW FB_FILE
@@ -86,31 +131,27 @@ environment variable
 (or the default frame buffer, if
 .CW FB_FILE
 is not set).
+If this is the last option specified, the
+.CW -F
+is optional.
 .SH DISCUSSION
 Pixel averaging may be meaningless for some images or color maps,
 in which case the sampling option should be specified.
 Images of the Mandelbrot set (see \fImandel\fP(\*(ms))
 are a good example of this.
 .SH EXAMPLE
-The following procedure adjusts the aspect ratio
-of an image obtained from a personal computer
+The following procedure enlarges an image obtained from a personal computer
 .I via
 the
 .CW gif-fb
-utility.
-(\f\*(pfhoc\fP
-is a calculator utility described in
-``The UNIX Programming Environment''
-by Brian W. Kernighan and Rob Pike
-(Prentice-Hall, 1984)
-that is locally supported by BRL/VLD-VMB.)
+utility to fill a 1280-by-1024 frame buffer.
 .RS
-\fI$\fP \|\f\*(pfgif-fb \|image.gif	# display the PC image\fP
+\fI$\fP \|\f\*(pfgif-fb \|image.gif	# display the small PC image\fP
 .br
-\fI$\fP \|\f\*(pffbstretch \|-x \`echo 512/320 | hoc\` \|-y \`echo 512/200 | hoc\`\fP
+\fI$\fP \|\f\*(pffbstretch \|-w 320 \|-n 200 \|| \|-W 1280 \|-N 1024\fP
 .RE
 .SH "SEE ALSO"
-gif-fb(\*(ms), mandel(\*(ms), hoc(\*(Vs), libfb(\*(ls), pix(\*(fs).
+gif-fb(\*(ms), mandel(\*(ms), pixscale(\*(ms), libfb(\*(ls), pix(\*(fs).
 .SH DIAGNOSTICS
 Error messages are intended to be self-explanatory.
 .SH AUTHOR
