--- a/fb/gif-fb.1
+++ b/fb/gif-fb.1
@@ -1,4 +1,4 @@
-'\"	gif-fb.1	%W% %E%
+'\"	@(#)$Header$ (BRL)
 '\" Edit the next two lines to configure for your system:
 .ds ms 1\" utility manual section, normally 1B -- alternatives are 1, 1L, etc.
 .ds ls 3\" library manual section, normally 3B -- alternatives are 3, 3L, etc.
@@ -16,9 +16,7 @@ gif-fb \- display GIF file on frame buffer
 .SH SYNOPSIS
 .CW gif-fb
 [
-.CW -d
-] [
-.CW -f
+.CW -F
 .I "frame buffer name"
 ] [
 .CW -i
@@ -26,19 +24,17 @@ gif-fb \- display GIF file on frame buffer
 ] [
 .CW -o
 ] [
+.CW -v
+] [
 .I "GIF file name"
 ]
 .SH DESCRIPTION
 .CW gif-fb
-displays on a frame buffer the images described by a CompuServe GIF format file.
+displays on a frame buffer the images described by a
+CompuServe GIF (Graphics Interchange Format) file.
 .SS Options
 .TP "\w'\f\*(pf-f\fP \fIframe buffer name\fP\ \ \ 'u"
-.CW -d
-(``debug'')\ 
-Also prints information about the GIF images
-on the standard error output.
-.TP
-\f\*(pf-f\fP \fIframe buffer name\fP
+\f\*(pf-F\fP \fIframe buffer name\fP
 Outputs to the specified frame buffer
 instead of the one specified by the
 .CW FB_FILE
@@ -46,6 +42,9 @@ environment variable
 (or the default frame buffer, if
 .CW FB_FILE
 is not set).
+The frame buffer size requested will be the same as
+the input GIF screen size.
+The actual size obtained depends on details of the specific frame buffer.
 .TP
 \f\*(pf-i\fP \fIimage number\fP
 Displays just the specified image
@@ -57,6 +56,11 @@ rather than displaying all images as the GIF specification requires.
 Skips the initial clearing of the frame buffer
 to the background color specified in the GIF file.
 .TP
+.CW -v
+(``verbose'')\ 
+Also prints information about the GIF images
+on the standard error output.
+.TP
 .I "GIF file name"
 Specifies the GIF input file to be translated,
 rather than reading the file from the standard input.
@@ -64,11 +68,14 @@ rather than reading the file from the standard input.
 The GIF ``standard'' is far from an ideal specification for frame buffer images,
 but it has been widely accepted in the personal computer arena,
 and consequently there are a large number of images stored in GIF format
-on bulletin board systems and other information services.
+on bulletin-board systems and other information services.
 Since most personal computer systems have GIF translators available for them,
 .CW gif-fb
 provides a means of converting most images from such systems
 into a form suitable for processing with other BRL-CAD utilities.
+.P
+Notice that multiple images within a single GIF file
+can achieve animation effects.
 .SH EXAMPLE
 The following is a typical invocation:
 .RS
