--- a/fb/fbstretch.1
+++ b/fb/fbstretch.1
@@ -1,9 +1,9 @@
 '\"	@(#)$Header$ (BRL)
 '\" Edit the next two lines to configure for your system:
-.ds ms 1B\" utility manual section, normally 1B -- alternatives are 1, 1L, etc.
-.ds ls 3B\" library manual section, normally 3B -- alternatives are 3, 3L, etc.
-.ds fs 4B\" format manual section, normally 4B -- alternatives are 5, 4L, etc.
-.ie t .ds pf (CB\" "printout" font, normally (CW -- use B if you don't have one
+.ds ms 1\" utility manual section, normally 1B -- alternatives are 1, 1L, etc.
+.ds ls 3\" library manual section, normally 3B -- alternatives are 3, 3L, etc.
+.ds fs 5\" format manual section, normally 4B -- alternatives are 5, 4L, etc.
+.ie t .ds pf B\" "printout" font, normally (CW -- use B if you don't have one
 .el .ds pf 1
 '\"
 .de CW
